--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.3.4",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.32",
+    "pinia-persistedstate-plugin": "^0.1.0",
     "sass": "^1.60.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
